Fix spacing and alignment in certificate details modal

--- a/frontend/components/DataSet/_styles.scss
+++ b/frontend/components/DataSet/_styles.scss
@@ -1,6 +1,7 @@
 .data-set {
   display: flex;
   flex-direction: column;
+  align-items: center;
   font-size: $x-small;
   gap: $pad-xsmall;
 
